Fix conversion from filename to URL.